Change config; pygments => highlighter.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Christopher Meiklejohn
 description: The blog of Christopher Meiklejohn
 url: http://christophermeiklejohn.com
-pygments: true
+highlighter: true
